@@ -3,6 +3,7 @@
     user visible changes, client:
     * using STAGING_FOLDER, SVN_CHECKOUT_FOLDER, SVN_CLIENT_PATH, DOWNLOAD_TOOL_PATH, CHECKSUM_TOOL_PATH instead of __STAGING_FOLDER__ , __SVN_FOLDER__, __RESOLVED_SVN_CLIENT_PATH__, __RESOLVED_DOWNLOAD_TOOL_PATH__, __RESOLVED_CHECKSUM_TOOL_PATH__
     * wtar files are expnaded during sync not during copy
+    * Fixed unwtar for Windows
 
     user visible changes, admin:
     * new command svn2stage, to prepare folders for entering changes
@@ -10,6 +11,7 @@
     
     programmer visible changes:
     * new method for PlatformSpecificHelperBase & derivatives: tar/untar
+    * Implemented rmdir, rmfile for Windows
 
 26/1/2014 0.7.2  Shai Shasag <shai@waves.com>
 
